# DualMesh-UDF

./: .gitignore  README.md  pyproject.toml  setup.py
DualMeshUDF/: __init__.py  extract_mesh.py
DualMeshUDF/include/: mesh_utils.h  octree.h  qef.h
DualMeshUDF/src/: mesh_utils.cpp  octree.cpp  py_api.cpp  qef_eigen.cpp
example/: neural_utils.py  test.py
example/networks/: config.py  mlp.py
